# nydus

./: .env.example  .gitignore  .gitignore copy  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
base_eggs/letta/: Nydusfile
base_eggs/openclaw/: Nydusfile
docs/: architecture.md  cli.md  conf.py  configuration.md  egg-format.md  index.md  nydusfile.md  pipelines.md  quickstart.md  requirements.txt  troubleshooting.md
docs/_build_linkcheck/: output.json  output.txt
docs/advanced/: adding-connectors.md  architecture.md  connectors.md  index.md  llm-refinement.md  nest.md  pii-redaction.md  security-model.md  signing.md  troubleshooting.md
examples/: README.md
pynydus/: __init__.py  config.py
specs/: a2a.md  agents.md  agentskills.md  apm.md  mcp.md
tests/: __init__.py  _letta_hatch_fixtures.py  _openclaw_hatch_fixtures.py  _zeroclaw_hatch_fixtures.py  conftest.py  helpers.py  test_agent_centric.py  test_allowed_providers.py  test_base_eggs.py  test_cli.py  test_client.py  test_differ.py  test_edge_cases.py  test_hatch_logging.py  test_inspect_logs.py  test_integration.py  test_letta_hatcher.py  test_letta_spawner.py  test_llm.py  test_llm_logging.py  test_mcp_configs.py  test_merge_directives.py  test_nydusfile.py  test_nydusfile_enhancements.py  test_openclaw_hatcher.py  test_openclaw_spawner.py  test_packager.py  test_phased_pipeline.py  test_pipeline.py  test_presidio.py  test_raw_types.py  test_refinement.py  test_registry.py  test_schemas.py  test_signing.py  test_skill_format.py  test_skills_archive.py  test_spawn_log_feed.py  test_target_agnostic.py  test_validator.py  (+2 more)
(+301 files in other folders)
