[project]
name = "pynydus"
version = "0.0.0"
description = "Portable state transport for AI agents"
readme = "README.md"
authors = [
    { name = "Nydus Team", email = "contact@nydus.ag" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=43.0.0",
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "instructor>=1.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
nydus = "pynydus.cmd.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc2>=0.5",
    "myst-parser>=3.0",
    "furo>=2024.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pynydus"]
omit = [
    "pynydus/agents/*/hatcher.py",  # hatchers tested via integration
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
